Fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,17 +14,17 @@
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
 
-    --primary: 240 5.9% 10%;
+    --primary: 240 5.9% 9%;
     --primary-foreground: 240 4.8% 95.9%;
 
     --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+    --secondary-foreground: 240 5.9% 9%;
 
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
     --accent: 240 4.8% 93.3%;
-    --accent-foreground: 240 5.9% 10%;
+    --accent-foreground: 240 5.9% 9%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -37,8 +37,8 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
-    --footer: 240 5.9% 10%;
+    --background: 240 5.9% 9%;
+    --footer: 240 5.9% 9%;
     --foreground: 0 0% 98%;
 
     --card: 240 10% 3.9%;
@@ -48,7 +48,7 @@
     --popover-foreground: 0 0% 98%;
 
     --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
+    --primary-foreground: 240 10% 3.9%;
 
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
